add update Clash.Meta

--- a/clashN/clashN/Forms/MainForm.zh-Hans.resx
+++ b/clashN/clashN/Forms/MainForm.zh-Hans.resx
@@ -169,7 +169,7 @@
     <value>253, 22</value>
   </data>
   <data name="tsbSubUpdate.Text" xml:space="preserve">
-    <value>更新订阅</value>
+    <value>更新订阅(不通过代理)</value>
   </data>
   <data name="tsbSubUpdateViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>253, 22</value>
@@ -355,7 +355,7 @@
     <value>260, 22</value>
   </data>
   <data name="menuUpdateSubscriptions.Text" xml:space="preserve">
-    <value>更新订阅</value>
+    <value>更新订阅(不通过代理)</value>
   </data>
   <data name="menuUpdateSubViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>260, 22</value>
