--- a/clashN/clashN/Forms/MainForm.resx
+++ b/clashN/clashN/Forms/MainForm.resx
@@ -99,7 +99,7 @@
     <value>343, 22</value>
   </data>
   <data name="tsbSubUpdate.Text" xml:space="preserve">
-    <value>Update subscription</value>
+    <value>Update subscription without proxy</value>
   </data>
   <data name="tsbSubUpdateViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>343, 22</value>
@@ -169,6 +169,18 @@
   </data>
   <data name="menuClearProfileStatistics.Text" xml:space="preserve">
     <value>Clear all service statistics</value>
+  </data>
+  <data name="tsbProfile.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="tsbProfile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>64, 53</value>
+  </data>
+  <data name="tsbProfile.Text" xml:space="preserve">
+    <value>Profiles</value>
+  </data>
+  <data name="tsbProfile.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
+    <value>ImageAboveText</value>
   </data>
   <data name="cmsLv.Size" type="System.Drawing.Size, System.Drawing">
     <value>344, 358</value>
@@ -296,18 +308,6 @@
   </data>
   <data name="&gt;&gt;scMain.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="tsbProfile.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
-    <value>Magenta</value>
-  </data>
-  <data name="tsbProfile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>64, 53</value>
-  </data>
-  <data name="tsbProfile.Text" xml:space="preserve">
-    <value>Profiles</value>
-  </data>
-  <data name="tsbProfile.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
-    <value>ImageAboveText</value>
   </data>
   <data name="splitContainer1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -637,7 +637,7 @@
     <value>294, 22</value>
   </data>
   <data name="menuUpdateSubscriptions.Text" xml:space="preserve">
-    <value>Update subscriptions</value>
+    <value>Update subscription without proxy</value>
   </data>
   <data name="menuUpdateSubViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>294, 22</value>
@@ -655,7 +655,7 @@
     <value>Exit</value>
   </data>
   <data name="cmsMain.Size" type="System.Drawing.Size, System.Drawing">
-    <value>295, 243</value>
+    <value>295, 221</value>
   </data>
   <data name="&gt;&gt;cmsMain.Name" xml:space="preserve">
     <value>cmsMain</value>
@@ -800,9 +800,6 @@
   </data>
   <data name="tsbCheckUpdateMetaCore.Text" xml:space="preserve">
     <value>Update Meta Core</value>
-  </data>
-  <data name="tsbCheckUpdateMetaCore.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
   </data>
   <data name="toolStripSeparator15.Size" type="System.Drawing.Size, System.Drawing">
     <value>245, 6</value>
