--- a/clashN/clashN/Resx/ResUI.zh-Hans.resx
+++ b/clashN/clashN/Resx/ResUI.zh-Hans.resx
@@ -376,4 +376,7 @@
   <data name="RunAsAdmin" xml:space="preserve">
     <value>以管理员身份运行</value>
   </data>
+  <data name="EnableTunModeFailed" xml:space="preserve">
+    <value>启用 tun 模式失败, 请以管理员身份运行</value>
+  </data>
 </root>
