--- a/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
+++ b/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
@@ -61,18 +61,6 @@
     <value>取消(&amp;C)</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>662, 391</value>
-  </data>
-  <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>654, 361</value>
-  </data>
-  <data name="tabPage1.Text" xml:space="preserve">
-    <value>  Core:基础设置  </value>
-  </data>
-  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>648, 355</value>
-  </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
     <value>99, 17</value>
   </data>
@@ -103,11 +91,23 @@
   <data name="label2.Text" xml:space="preserve">
     <value>本地http监听端口</value>
   </data>
-  <data name="tabPage7.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>648, 355</value>
+  </data>
+  <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
     <value>654, 361</value>
   </data>
-  <data name="tabPage7.Text" xml:space="preserve">
-    <value>  clashN设置  </value>
+  <data name="tabPage1.Text" xml:space="preserve">
+    <value>  Core:基础设置  </value>
+  </data>
+  <data name="txtautoUpdateSubInterval.Location" type="System.Drawing.Point, System.Drawing">
+    <value>276, 153</value>
+  </data>
+  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 17</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>自动更新订阅的间隔(单位小时)</value>
   </data>
   <data name="btnFontSetting.Text" xml:space="preserve">
     <value>字体设置 (需要重启)</value>
@@ -122,10 +122,10 @@
     <value>276, 124</value>
   </data>
   <data name="label15.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 17</value>
+    <value>196, 17</value>
   </data>
   <data name="label15.Text" xml:space="preserve">
-    <value>自动更新订阅和Geo文件的间隔(单位小时)</value>
+    <value>自动更新Geo文件的间隔(单位小时)</value>
   </data>
   <data name="chkIgnoreGeoUpdateCore.Size" type="System.Drawing.Size, System.Drawing">
     <value>163, 21</value>
@@ -151,17 +151,11 @@
   <data name="chkAutoRun.Text" xml:space="preserve">
     <value>开机自动启动(可能会不成功)</value>
   </data>
-  <data name="tabPage3.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="tabPage7.Size" type="System.Drawing.Size, System.Drawing">
     <value>654, 361</value>
   </data>
-  <data name="tabPage3.Text" xml:space="preserve">
-    <value>  系统代理设置  </value>
-  </data>
-  <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>654, 361</value>
-  </data>
-  <data name="groupBox2.Text" xml:space="preserve">
-    <value>例外</value>
+  <data name="tabPage7.Text" xml:space="preserve">
+    <value>  clashN设置  </value>
   </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>91, 17</value>
@@ -175,11 +169,26 @@
   <data name="label12.Text" xml:space="preserve">
     <value>对于下列字符开头的地址不使用代理配置文件:</value>
   </data>
-  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>662, 60</value>
+  <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>654, 361</value>
+  </data>
+  <data name="groupBox2.Text" xml:space="preserve">
+    <value>例外</value>
+  </data>
+  <data name="tabPage3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>654, 361</value>
+  </data>
+  <data name="tabPage3.Text" xml:space="preserve">
+    <value>  系统代理设置  </value>
+  </data>
+  <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>662, 391</value>
   </data>
   <data name="btnOK.Text" xml:space="preserve">
     <value>确定(&amp;O)</value>
+  </data>
+  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>662, 60</value>
   </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>662, 10</value>
