--- a/clashN/clashN/Properties/Resources.resx
+++ b/clashN/clashN/Properties/Resources.resx
@@ -163,4 +163,13 @@
   <data name="speedtest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\speedtest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NotifyIcon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotifyIcon1.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NotifyIcon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotifyIcon2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NotifyIcon3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NotifyIcon3.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
