--- a/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
+++ b/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
@@ -262,4 +262,7 @@
   <data name="btnFontReset.Text" xml:space="preserve">
     <value>字体重置</value>
   </data>
+  <data name="label6.Text" xml:space="preserve">
+    <value>本地混合监听端口</value>
+  </data>
 </root>
