--- a/clashN/clashN/Forms/MainForm.resx
+++ b/clashN/clashN/Forms/MainForm.resx
@@ -101,11 +101,23 @@
   <data name="tsbSubUpdate.Text" xml:space="preserve">
     <value>Update subscription without proxy</value>
   </data>
+  <data name="tsbSubUpdateSelected.Size" type="System.Drawing.Size, System.Drawing">
+    <value>343, 22</value>
+  </data>
+  <data name="tsbSubUpdateSelected.Text" xml:space="preserve">
+    <value>Update selected subscription without proxy</value>
+  </data>
   <data name="tsbSubUpdateViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>343, 22</value>
   </data>
   <data name="tsbSubUpdateViaProxy.Text" xml:space="preserve">
     <value>Update subscription via proxy</value>
+  </data>
+  <data name="tsbSubUpdateViaProxySelected.Size" type="System.Drawing.Size, System.Drawing">
+    <value>343, 22</value>
+  </data>
+  <data name="tsbSubUpdateViaProxySelected.Text" xml:space="preserve">
+    <value>Update selected subscription via proxy</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>340, 6</value>
@@ -170,8 +182,20 @@
   <data name="menuClearProfileStatistics.Text" xml:space="preserve">
     <value>Clear all service statistics</value>
   </data>
+  <data name="tsbProfile.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
+    <value>Magenta</value>
+  </data>
+  <data name="tsbProfile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>64, 53</value>
+  </data>
+  <data name="tsbProfile.Text" xml:space="preserve">
+    <value>Profiles</value>
+  </data>
+  <data name="tsbProfile.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
+    <value>ImageAboveText</value>
+  </data>
   <data name="cmsLv.Size" type="System.Drawing.Size, System.Drawing">
-    <value>344, 358</value>
+    <value>344, 424</value>
   </data>
   <data name="&gt;&gt;cmsLv.Name" xml:space="preserve">
     <value>cmsLv</value>
@@ -296,18 +320,6 @@
   </data>
   <data name="&gt;&gt;scMain.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="tsbProfile.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
-    <value>Magenta</value>
-  </data>
-  <data name="tsbProfile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>64, 53</value>
-  </data>
-  <data name="tsbProfile.Text" xml:space="preserve">
-    <value>Profiles</value>
-  </data>
-  <data name="tsbProfile.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
-    <value>ImageAboveText</value>
   </data>
   <data name="splitContainer1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -496,7 +508,7 @@
     <value>Exit</value>
   </data>
   <data name="cmsMain.Size" type="System.Drawing.Size, System.Drawing">
-    <value>278, 192</value>
+    <value>278, 170</value>
   </data>
   <data name="&gt;&gt;cmsMain.Name" xml:space="preserve">
     <value>cmsMain</value>
@@ -795,10 +807,22 @@
   <data name="&gt;&gt;toolStripSeparator4.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;tsbSubUpdateSelected.Name" xml:space="preserve">
+    <value>tsbSubUpdateSelected</value>
+  </data>
+  <data name="&gt;&gt;tsbSubUpdateSelected.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;tsbSubUpdate.Name" xml:space="preserve">
     <value>tsbSubUpdate</value>
   </data>
   <data name="&gt;&gt;tsbSubUpdate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tsbSubUpdateViaProxySelected.Name" xml:space="preserve">
+    <value>tsbSubUpdateViaProxySelected</value>
+  </data>
+  <data name="&gt;&gt;tsbSubUpdateViaProxySelected.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;tsbSubUpdateViaProxy.Name" xml:space="preserve">
