--- a/clashN/clashN/Resx/ResUI.resx
+++ b/clashN/clashN/Resx/ResUI.resx
@@ -376,4 +376,7 @@
   <data name="MsgSkipSubscriptionUpdate" xml:space="preserve">
     <value>Skip this subscription update</value>
   </data>
+  <data name="MsgUpdateCoreCoreFailed" xml:space="preserve">
+    <value>Update Core failed, see the log for details</value>
+  </data>
 </root>
