--- a/clashN/clashN/Resx/ResUI.zh-Hans.resx
+++ b/clashN/clashN/Resx/ResUI.zh-Hans.resx
@@ -379,4 +379,7 @@
   <data name="MsgUpdateCoreCoreFailed" xml:space="preserve">
     <value>更新Core失败，详情见日志</value>
   </data>
+  <data name="LvUpdateTime" xml:space="preserve">
+    <value>更新时间</value>
+  </data>
 </root>
